# ZTask

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: ztask.cpp
